--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@solidjs/router": "^0.15.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/solid-table": "^8.21.3",
     "chart.js": "^4.4.9",
     "solid-chartjs": "^1.3.11",
     "solid-js": "^1.9.5",
